https://bugs.webkit.org/show_bug.cgi?id=45164

Reviewed by Dan Bernstein.

REGRESSION: <a><img align=top></a> Clickable area too large

Make sure to clamp hit testing of quirky inline flow boxes the same way we already clamped
painting.

Source/WebCore:

* rendering/InlineFlowBox.cpp:
(WebCore::InlineFlowBox::nodeAtPoint):

LayoutTests:

* fast/inline/inline-position-top-align-expected.txt: Added.
* fast/inline/inline-position-top-align.html: Added.



Canonical link: https://commits.webkit.org/70935@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81055 268f45cc-cd09-0410-ab3c-d52691b4dbfc